fixed vw 'bug' that scrollbar counts to view width

--- a/res/css/general.css
+++ b/res/css/general.css
@@ -123,7 +123,7 @@ p:last-child {
         opacity: 1;
     }
     100% {
-        border-left-width: 100vw;
+        border-left-width: 100vh;
         opacity: 1;
     }
 }
